--- a/menuDynamic/src/App.css
+++ b/menuDynamic/src/App.css
@@ -1,5 +1,65 @@
 body{
-  padding: 50px;
+  padding: 700px 50px 50px 50px;
+}
+
+@-webkit-keyframes fadeInLeft {
+	0% {
+    opacity: 0;
+		-webkit-transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-webkit-transform: translateX(0);
+	}
+}
+
+@-moz-keyframes fadeInLeft {
+	0% {
+		opacity: 0;
+		-moz-transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-moz-transform: translateX(0);
+	}
+}
+
+@-ms-keyframes fadeInLeft {
+	0% {
+		opacity: 0;
+		-ms-transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-ms-transform: translateX(0);
+	}
+}
+
+@-o-keyframes fadeInLeft {
+	0% {
+		opacity: 0;
+		-o-transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-o-transform: translateX(0);
+	}
+}
+
+@keyframes fadeInLeft {
+	0% {
+    opacity: 0;
+		transform: translateX(-20px);
+	}
+	
+	100% {
+    opacity: 1;
+		transform: translateX(0);
+	}
 }
 
 ul{
@@ -33,13 +93,15 @@ ul{
   background: #2d6ba0;
 }
 
-
-.menuDyn > li{
-  max-width: 170px;
+.menuDyn li{
   position: relative;
 }
 
-.menuDyn > li.hasSub a:after{
+.menuDyn > li{
+  max-width: 170px;
+}
+
+.menuDyn li.hasSub > a:after{
   content: '';
   position: absolute;
   right: 10px;
@@ -53,4 +115,19 @@ ul{
 
 .menuDyn > li .sub{
   right: -140px;
+}
+
+.menuDyn li.active > .sub{
+  display: block;
+
+  -webkit-animation-name: fadeInLeft;
+	-moz-animation-name: fadeInLeft;
+	-ms-animation-name: fadeInLeft;
+	-o-animation-name: fadeInLeft;
+	animation-name: fadeInLeft;
+	-webkit-animation-duration: .5s;
+	-moz-animation-duration: .5s;
+	-ms-animation-duration: .5s;
+	-o-animation-duration: .5s;
+	animation-duration: .5s;
 }
