--- a/menuDynamic/src/App.css
+++ b/menuDynamic/src/App.css
@@ -1,5 +1,18 @@
+html{
+	padding: 20px;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+}
 body{
-  padding: 200px 50px 50px 50px;
+	width: 100%;
+	height: 100%;
+}
+
+#root,
+.App{
+	width: 100%;
+	height: 100%;
 }
 
 @-webkit-keyframes fadeInLeft {
@@ -94,7 +107,7 @@ ul{
   width: 100%;
   box-sizing: border-box;
   position: relative;
-  text-transform: capitalize;
+	text-transform: capitalize;
 }
 
 .menuDyn li:hover > a,
